# barber-shop-elite

./: .gitignore  CLIENT.md  Cahier des charges.txt  DEVELOPER.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  setup.ps1  tsconfig.node.json  vite.config.js  vite.config.ts
.agent/skills/yumi-hub/: SKILL.md
src/: App.tsx  env.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/Agenda/: AgendaModule.tsx
src/components/Auth/: LoginForm.tsx
src/components/Clients/: ClientFormModal.tsx  ClientsModule.tsx
src/components/Common/: EliteAlert.tsx  EliteReceipt.tsx  LiveQueueWidget.tsx  MorphingLogo.tsx  NotificationCenter.tsx  QuickCommand.tsx  ShareCenterModal.tsx
src/components/Dashboard/: DashboardModule.tsx  PrestationsChart.tsx
src/components/Guard/: MaintenancePage.tsx  index.ts
src/components/Guard/LicenseGuard/: index.tsx  theme.ts
src/components/POS/: POSModule.tsx
src/components/Queue/: QueueModule.tsx
src/components/Settings/: SettingsModule.tsx
src/components/Settings/sections/: AuditSection.tsx  LicenseSection.tsx  MaintenanceSection.tsx  SessionSection.tsx
src/lib/: ExportService.ts  TicketService.ts  auditService.ts  db.ts  services.ts  utils.ts
src/store/: useAppointmentStore.ts  useArchiveStore.ts  useAuthStore.ts  useCartStore.ts  useClientStore.ts  useNotificationStore.ts  useQueueStore.ts  useServiceStore.ts  useSettingsStore.ts  useStaffStore.ts
src/types/: index.ts  tauri.d.ts
(+5 files in other folders)
