[package]
name = "barber_shop"
version = "1.0.0"
description = "Barber Shop Management System - Elite Edition"
authors = ["Yumi Hub"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "barber_shop_bin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde      = { version = "1.0", features = ["derive"] }
log        = "0.4"
tauri             = { version = "2.10.3", features = [] }
tauri-plugin-log  = "2"
tauri-plugin-sql  = { version = "2", features = ["sqlite"] }
bcrypt            = "0.19.0"
uuid              = { version = "1.20.0", features = ["v4"] }
chrono            = "0.4.44"
ed25519-dalek     = { version = "2.1.1", features = ["serde"] }
hex               = "0.4.3"
